--- a/src/shared/opensource/projects.json
+++ b/src/shared/opensource/projects.json
@@ -38,9 +38,9 @@
     },
     {
       "id": "MDEwOlJlcG9zaXRvcnkyNDU0NjcyNzQ=",
-      "name": "masterPortfolio",
+      "name": "Protfolio-Website",
       "createdAt": "2020-03-06T16:26:54Z",
-      "url": "https://github.com/ashutosh1919/masterPortfolio",
+      "url": "https://github.com/Projects-in-python/Portfolio-Website.git",
       "description": "🔥 The Complete Customizable Software Developer Portfolio Template which lets you showcase your work and provides each and every detail about you as Software Developer.",
       "isFork": false,
       "languages": [
@@ -64,59 +64,97 @@
     },
     {
       "id": "R_kgDOG0_8uQ",
-      "name": "react-awesome-shapes",
-      "createdAt": "2022-02-11T14:50:20Z",
+      "name": "Chords Music Application",
+      "createdAt": "2025-02-04T14:50:20Z",
       "url": "https://github.com/ashutosh1919/react-awesome-shapes",
-      "description": "🌀 Insert Awesome Shapes into Your React Site with Ease.",
+      "description": "🌀 Music Application for the cristian community",
       "isFork": false,
       "languages": [
         {
-          "name": "HTML",
-          "iconifyClass": "logos-html-5"
+          "name": "Flutter",
+          "iconifyClass": "logos:flutter"
         },
         {
-          "name": "CSS",
-          "iconifyClass": "logos-css-3"
+          "name": "Dart",
+          "iconifyClass": "logos:dart"
         },
         {
-          "name": "Shell",
-          "iconifyClass": "simple-icons:shell"
+          "name": "Firebase",
+          "iconifyClass": "logos:firebase"
         },
         {
-          "name": "JavaScript",
-          "iconifyClass": "logos-javascript"
+          "name": "Google Auth",
+          "iconifyClass": "logos:google"
+        },
+        {
+          "name": "Facebook",
+          "iconifyClass": "logos:facebook"
         }
       ]
     },
     {
       "id": "R_kgDOGcPKSQ",
-      "name": "neuro-symbolic-sudoku-solver",
-      "createdAt": "2021-11-26T17:56:07Z",
-      "url": "https://github.com/ashutosh1919/neuro-symbolic-sudoku-solver",
-      "description": "⚙️ Solving sudoku using Deep Reinforcement learning in combination with powerful symbolic representations.",
+      "name": "Pine Wraps Application",
+      "createdAt": "2025-02-04T14:50:20Z",
+      "url": "https://play.google.com/store/apps/details?id=com.pinewraps.app&pcampaignid=web_share",
+      "description": [
+        "⚙️Looking for the perfect way to celebrate special moments? Pine Wraps has got you covered! Discover a delightful range of cakes, beautiful flower arrangements, and unique gifting options, all in one place."
+      ],
       "isFork": false,
       "languages": [
         {
-          "name": "Python",
-          "iconifyClass": "logos-python"
+          "name": "Flutter",
+          "iconifyClass": "logos:flutter"
+        },
+        {
+          "name": "Dart",
+          "iconifyClass": "logos:dart"
+        },
+        {
+          "name": "Firebase",
+          "iconifyClass": "logos:firebase"
+        },
+        {
+          "name": "Google Auth",
+          "iconifyClass": "logos:google"
+        },
+        {
+          "name": "Facebook",
+          "iconifyClass": "logos:facebook"
         }
       ]
     },
     {
       "id": "MDEwOlJlcG9zaXRvcnkzMjU5NDM1MTE=",
-      "name": "react-liquidswipe",
+      "name": "Swaraj Rides Application",
       "createdAt": "2021-01-01T08:31:51Z",
       "url": "https://github.com/ashutosh1919/react-liquidswipe",
-      "description": "🚀 Smooth Liquid Swipe Animation to transition between different components.",
+      "description": "🚀 This is the Taxi Booking Appication.",
       "isFork": false,
       "languages": [
         {
-          "name": "JavaScript",
-          "iconifyClass": "logos-javascript"
+          "name": "Flutter",
+          "iconifyClass": "logos:flutter"
         },
         {
-          "name": "CSS",
-          "iconifyClass": "logos-css-3"
+          "name": "Dart",
+          "iconifyClass": "logos:dart"
+        },
+        {
+          "name": "Firebase",
+          "iconifyClass": "logos:firebase"
+        },
+        {
+          "name": "Google Auth",
+          "iconifyClass": "logos:google"
+        },
+        {
+          "name": "Google Maps",
+          "iconifyClass": "logos:google-maps"
+        },
+        {
+          "name": "Facebook",
+          "iconifyClass": "logos:facebook"
         }
       ]
     }
